minijinja/tests/snapshots/test_templates__vm@err_repeat_true_iterator.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ one_shot_iterator * 3 }}"
info: {}
input_file: minijinja/tests/inputs/err_repeat_true_iterator.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "cannot repeat unsized iterables",
    name: "err_repeat_true_iterator.txt",
    line: 1,
}

invalid operation: cannot repeat unsized iterables (in err_repeat_true_iterator.txt:1)
------------------------ err_repeat_true_iterator.txt -------------------------
   1 > {{ one_shot_iterator * 3 }}
     i    ^^^^^^^^^^^^^^^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    one_shot_iterator: <iterator>,
}
-------------------------------------------------------------------------------
