minijinja/tests/snapshots/test_templates__vm@err_required_block.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "before[{% block body required %}{% endblock %}]after"
info: {}
input_file: minijinja/tests/inputs/err_required_block.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "Required block 'body' not found",
    name: "err_required_block.txt",
    line: 1,
}

invalid operation: Required block 'body' not found (in err_required_block.txt:1)
--------------------------- err_required_block.txt ----------------------------
   1 > before[{% block body required %}{% endblock %}]after
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
