minijinja/tests/snapshots/test_templates__vm@err_strict_undefined_if.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% if undefined_value %}\n    ...\n{% endif %}"
info:
  $settings:
    undefined: strict
input_file: minijinja/tests/inputs/err_strict_undefined_if.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`undefined_value` is undefined",
    name: "err_strict_undefined_if.txt",
    line: 1,
}

undefined value: `undefined_value` is undefined (in err_strict_undefined_if.txt:1)
------------------------- err_strict_undefined_if.txt -------------------------
   1 > {% if undefined_value %}
     i       ^^^^^^^^^^^^^^^ undefined value
   2 |     ...
   3 | {% endif %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
