minijinja/tests/snapshots/test_templates__vm@err_too_many_macro_args.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{% macro two_args(a, b) %}\n  {{ a }} and {{ b }}\n{% endmacro %}\n{{ two_args(1, 2, 3) }}"
info: {}
input_file: minijinja/tests/inputs/err_too_many_macro_args.txt
---
!!!ERROR!!!

Error {
    kind: TooManyArguments,
    name: "err_too_many_macro_args.txt",
    line: 4,
}

too many arguments (in err_too_many_macro_args.txt:4)
------------------------- err_too_many_macro_args.txt -------------------------
   1 | {% macro two_args(a, b) %}
   2 |   {{ a }} and {{ b }}
   3 | {% endmacro %}
   4 > {{ two_args(1, 2, 3) }}
     i    ^^^^^^^^^^^^^^^^^ too many arguments
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    a: Undefined,
    b: Undefined,
    two_args: <macro two_args>,
}
-------------------------------------------------------------------------------

